--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="topnav">
-  <a href="#lehuzas">Felső lehúzás</a>
+  <a href="/lehuzas.html">Felső lehúzás</a>
   <a href="#Fekvotamasz">Fekvőtámasz</a>
   <a href="#Guggolas">Guggolás padra</a>
   <a href="#Evezes">Evezés gépen ülve</a>  
