--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fő oldal</title>
 
-    <link rel="stylesheet" href="/iggen/master.css">
+    <link rel="stylesheet" href="/master.css">
 
 </head>
 <body>
