--- a/lehuzas.html
+++ b/lehuzas.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lehúzás</title>
+    <link rel="stylesheet" href="/master.css">
 </head>
 <body>
-    
+    <H1 id="lehuzas">Felső lehúzás</H1>
+<iframe style="border: none;"  src="https://player.vimeo.com/video/130071059?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%"></iframe>
+<p>A lehúzás bicepszre a bicepszet és a széles hátizmok alsó részét dolgoztatja meg leginkább. <br>
+  <b> Kiinduló helyzet </b> <br>
+  Fogd meg a rudat szűk, maximum vállszélességű fogással, a tenyerek az arcod felé nézzenek.
+  Koncentrálj arra, hogy a bicepsz erejével húzd le a rudat a mellkasodig, majd lassan engedd vissza.</p>   
+
 </body>
 </html>
