--- a/index.html
+++ b/index.html
@@ -18,57 +18,15 @@
 
 <div class="topnav">
   <a href="/lehuzas.html">Felső lehúzás</a>
-  <a href="#Fekvotamasz">Fekvőtámasz</a>
-  <a href="#Guggolas">Guggolás padra</a>
-  <a href="#Evezes">Evezés gépen ülve</a>  
-  <a href="#Kitores">Kitörés</a>
-  <a href="#Vallbolnyomas">Vállból nyomás</a>
-  <a href="#felhuzas">Felhúzás</a> 
-  <a href="#Tolodzkodas">Tolódzkodás</a>
+  <a href="/Fekvotamasz.html">Fekvőtámasz</a>
+  <a href="/Guggolas.html">Guggolás padra</a>
+  <a href="/Evezes.html">Evezés gépen ülve</a>  
+  <a href="/Kitores.html">Kitörés</a>
+  <a href="/Vallbolnyomas.html">Vállból nyomás</a>
+  <a href="/Felhuzas.html">Felhúzás</a> 
+  <a href="/tolodzkodas.html">Tolódzkodás</a>
 </div>
    
-
-<H1 id="lehuzas">Felső lehúzás</H1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/130071059?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%"></iframe>
-<p>A lehúzás bicepszre a bicepszet és a széles hátizmok alsó részét dolgoztatja meg leginkább. <br>
-  <b> Kiinduló helyzet </b> <br>
-  Fogd meg a rudat szűk, maximum vállszélességű fogással, a tenyerek az arcod felé nézzenek.
-  Koncentrálj arra, hogy a bicepsz erejével húzd le a rudat a mellkasodig, majd lassan engedd vissza.</p>
-
-<H1 id="Fekvotamasz">Fekvőtámasz</H1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/181928622?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>A fekvőtámasz egy testhelyzet, melyet jellemzően karhajlítás-nyújtással kombinálva testgyakorlatként az izmok erősítésére használnak. A gyakorlat erősíti a mell-, kar-, has-, hát-, fenék- és lábizmokat.</p>
-
-
-<H1 id="Guggolas">Guggolás padra</H1>
-<iframe style="border: none;" src="https://player.vimeo.com/video/130222525?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>A padra guggolás helyesen végezve a négyfejű combizmot, a combhajlítókat és a farizmot dolgoztatja meg. Koncentráltan, lassan érdemes végezni, ami sokkal intenzívebb, ill. más jellegű terhelésnek teszi ki a combodat, mint a hagyományos guggolás. Térdfájósoknak jó alternatíva lehet (nyilvánvalóan a térdprobléma fokától és jellegétől függően).</p>
-
-<H1 id="Evezes">Evezés gépen ülve</H1>
-<iframe style="border: none;" src="https://player.vimeo.com/video/130737809?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>Az evezés gépen ülve a hátizom középső régióit dolgoztatja meg, de a karod tartásának variálásával a külső része is stimulálható. <br>
-Ülj be az evezőgépbe, támaszd meg a mellkasodat a támlán. Ragadd meg a karokat picivel a vállmagasságnál lejjebb.</p>
-
-<H1 id="Kitores">Kitörés</H1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/130221745?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>Ez a mozgás a combhajlítókat, a farizmokat és a négyfejű combizmot fejleszti. Miközben erőteljes izom-összehúzódás éri a combizmokat, ugyanakkor erőteljes nyújtó hatása is van a gyakorlatnak, ami ezáltal kiemelten hatékonnyá és komplexszé teszi. A kitörés helyesen végezve rendkívül intenzív, folyamatos terhelést biztosít, így mindenképpen érdemes beilleszteni a lábedzésedbe.</p>
-
-
-<H1 id="Vallbolnyomas">Vállból nyomás</H1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/130419946?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>A gyakorlat elsősorban az első és az oldalsó deltaizmokat fejleszti. <br>
-Ülő helyzetben tarts két kézisúlyzót a vállaid magasságánál kicsit fentebb. Egyenes háttal, emelt fejjel ülj. <br>
-Nyomd ki mind a két súlyzót egyszerre a fejed fölé. A gyakorlat végzése közben ne dőlj hátra. Engedd vissza a súlyokat, és folytasd a gyakorlatot egyenletes ütemben.</p>
-
-
-<H1 id="felhuzas">Felhúzás</H1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/130737916?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%"></iframe>
-<p>A felhúzás az erőemelés harmadik gyakorlata. Kétségtelenül a legnehezebb erőgyakorlat. A erő, a puszta fizikai erő igazi próbája. A guggolás mellett a leghatásosabb teljes testet megmozgató gyakorlat. Felállni egy képtelenül nagy súllyal, ez az igazi kihívás. A felhúzást kevesen csinálják, mert rosszul végezve igen sérülésveszélyes is lehet, ám jól kivitelezve az egyik leghatásosabb tömegnövelő alapgyakorlat.</p>
-
-<h1 id="Tolodzkodas">Tolódzkodás</h1>
-<iframe style="border: none;"  src="https://player.vimeo.com/video/130071790?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%"></iframe>
-<p>A tolódzkodás egy remek mellizom-gyakorlat, különösen, ha a rudak viszonylag távol (70-85 cm) vannak egymástól. Az egymáshoz túl közel lévő rudak nagyobb mértékben mozgatják a tricepszet, bár azért a mellizom alsó és külső részét is megterhelik. Tehát a tolódzkodás a mellre akkor fog leginkább hatni, ha relatíve széles fogást alkalmazol.</p>
-
 
 <button onclick="topFunction()" id="myBtn" title="Go to top">Vissza az elejére</button>
 <script>
