--- a/Fekvotamasz.html
+++ b/Fekvotamasz.html
@@ -10,7 +10,14 @@
 <body>
     <H1 id="Fekvotamasz">Fekvőtámasz</H1>
 <iframe style="border: none;"  src="https://player.vimeo.com/video/181928622?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%" ></iframe>
-<p>A fekvőtámasz egy testhelyzet, melyet jellemzően karhajlítás-nyújtással kombinálva testgyakorlatként az izmok erősítésére használnak. A gyakorlat erősíti a mell-, kar-, has-, hát-, fenék- és lábizmokat.</p>
+<p>A fekvőtámasz az egyik legrégibb, legismertebb és legelterjedtebb általános erőnlét javító gyakorlat. A fekvőtámasz a mell, a tricepsz és a hát izmait is erősíti. Elvégzésének különféle módjai léteznek: széles támasszal, keskeny támasszal, felpolcolt lábakkal, pad közé, fekvőtámasz bakon, stb.
 
+    Addig engedd le magad, amíg a melled majdnem eléri a talajt, de ne érjen le.
+    Minden lefelé ereszkedés után tarts egy pillanatnyi szünetet, mielőtt kinyomnád magad.
+    A gyakorlat megkönnyíthető, ha a térdeden, és nem a lábfejeden támaszkodsz, és megnehezíthető, ha a lábaidat egy kis emelvényre helyezed.
+    Amennyiben szűkebb kartartást veszel fel, a terhelés java része áthelyeződik a tricepszre, míg szélesebb fogással a mellizmok végzik a nagyobb munkát.</p>
+<div class="kezdolap">
+    <a href="/index.html">Kezdőlap</a>
+  </div>
 </body>
 </html>
