--- a/lehuzas.html
+++ b/lehuzas.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="/master.css">
 </head>
 <body>
-    <H1 id="lehuzas">Felső lehúzás</H1>
+    <H1 id="lehuzas">Lehúzás bicepszre</H1>
 <iframe style="border: none;"  src="https://player.vimeo.com/video/130071059?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" allow="fullscreen; picture-in-picture" allowfullscreen="allowfullscreen" class="widget-vimeo-iframe" height="300px" width="100%"></iframe>
-<p>A lehúzás bicepszre a bicepszet és a széles hátizmok alsó részét dolgoztatja meg leginkább. <br>
-  <b> Kiinduló helyzet </b> <br>
+<p>Hatás
+  A lehúzás bicepszre a bicepszet és a széles hátizmok alsó részét dolgoztatja meg leginkább.
+  
+  Kiinduló helyzet
   Fogd meg a rudat szűk, maximum vállszélességű fogással, a tenyerek az arcod felé nézzenek.
-  Koncentrálj arra, hogy a bicepsz erejével húzd le a rudat a mellkasodig, majd lassan engedd vissza.</p>   
-
+  
+  A mozgás
+  Koncentrálj arra, hogy a bicepsz erejével húzd le a rudat a mellkasodig, majd lassan engedd vissza.
+  
+  Edzéstipp
+  Itt nem fontos a hátizmokat összehúzni a mozdulat alsó pontján, mivel pont az a lényeg, hogy a karod erejével mozgasd a rudat. Az alsó ponton feszíts rá keményen a bicepszedre!
+  
+  </p>   
+  <div class="kezdolap">
+    <a href="/index.html">Kezdőlap</a>
+  </div>
 </body>
 </html>
